[package]
name = "test_winit_android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
wgpu = "0.19.1"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.29.10", features = ["android-native-activity"] }
android_logger = "0.13.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
winit = "0.29.10"

[lib]
name = "test_winit_android"
crate-type = ["cdylib", "lib"]
